--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <div class="box" id="box8"></div>
         <div class="box" id="box9"></div>
       </div>
-    
+      <script src="script.js"></script>
 </body>
 </html>
