added reset button and refined functionality of addListeners

--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container" id="main">
+    <div class="container board" id="main">
       <span id="turn">Tic Tac Toe</span>
 
-      <div class="box" id="box1"></div>
-      <div class="box" id="box2"></div>
-      <div class="box" id="box3"></div>
-      <div class="box" id="box4"></div>
-      <div class="box" id="box5"></div>
-      <div class="box" id="box6"></div>
-      <div class="box" id="box7"></div>
-      <div class="box" id="box8"></div>
-      <div class="box" id="box9"></div>
+      <div id="row-1">
+        <div class="box" id="box1"></div>
+        <div class="box" id="box2"></div>
+        <div class="box" id="box3"></div>
+      </div>
+      <div id="row-2">
+        <div class="box" id="box4"></div>
+        <div class="box" id="box5"></div>
+        <div class="box" id="box6"></div>
+      </div>
+      <div id="row-3">
+        <div class="box" id="box7"></div>
+        <div class="box" id="box8"></div>
+        <div class="box" id="box9"></div>
+      </div>
     </div>
+    <button type="submit" id="resetButton">Reset</button>
     <script src="script.js"></script>
   </body>
 </html>
