--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="box" id="box9"></div>
       </div>
     </div>
-    <button type="submit" id="resetButton">Reset</button>
+    <button type="submit" id="resetButton">Play Again</button>
     <script src="script.js"></script>
   </body>
 </html>
