--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <span id="turn">Tic Tac Toe (in the park)</span>
     <div class="container board" id="main">
-      <span id="turn">Tic Tac Toe</span>
 
       <div id="row-1">
         <div class="box" id="box1"></div>
