Finalize style of title section

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <span id="turn">Tic Tac Toe (in the park)</span>
-    <div class="container board" id="main">
+      <span id="title">Tic Tac Toe in the Park</span>
+      <div class="container board" id="main">
 
-      <div id="row-1">
-        <div class="box" id="box1"></div>
-        <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div>
+        <div id="row-1">
+            <div class="box" id="box1"></div>
+            <div class="box" id="box2"></div>
+            <div class="box" id="box3"></div>
+        </div>
+        <div id="row-2">
+            <div class="box" id="box4"></div>
+            <div class="box" id="box5"></div>
+            <div class="box" id="box6"></div>
+        </div>
+        <div id="row-3">
+            <div class="box" id="box7"></div>
+            <div class="box" id="box8"></div>
+            <div class="box" id="box9"></div>
+        </div>
       </div>
-      <div id="row-2">
-        <div class="box" id="box4"></div>
-        <div class="box" id="box5"></div>
-        <div class="box" id="box6"></div>
-      </div>
-      <div id="row-3">
-        <div class="box" id="box7"></div>
-        <div class="box" id="box8"></div>
-        <div class="box" id="box9"></div>
-      </div>
-    </div>
     <script src="script.js"></script>
   </body>
 </html>
