Add player turn text

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="box" id="box9"></div>
         </div>
       </div>
+      <span id="turn">X goes first</span>
     <script src="script.js"></script>
   </body>
 </html>
